--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,13 @@ react-app/image-caption-generator/node_modules/
 .env.local
 .env.development.local
 .env.test.local
+node_modules/
+**/node_modules/
+dist/
+**/dist/
+.vite/
+**/.vite/
+.DS_Store
 react-app/image-caption-generator/node_modules/
 react-app/image-caption-generator/dist/
 react-app/image-caption-generator/.vite/
